Fix for 17739.